# penghermers

./: .env.example  .gitignore  .wranglerignore  AGENTS.md  brain.bat  cloudflare-build.sh  deploy_to_cloudflare.ps1  fix-github-auth.ps1  hermes.bat  hermes_interface.py  hermes_main.py  install-cursor-brain.bat  install.bat  main.py  publish-dry.bat  publish.bat  pyproject.toml  requirements.txt  telegram-bot.bat  worker_app.py  worker_dispatch.py  wrangler.toml
.cursor/rules/: hermers-core.mdc  hermes-cursor-engine.mdc
.github/workflows/: daily-tw-digest.yml
config/: agent.yaml  domains.example.yaml  domains.yaml  hermes.yaml
docs/: CLOUDFLARE_WORKER.md
python_modules/httpx-0.28.1.dist-info/: RECORD
python_modules/pyyaml-6.0.2.dist-info/: RECORD
python_modules/workers_runtime_sdk-1.1.4.dist-info/: METADATA  RECORD
scripts/: env.bat  hold.bat
src/hermers/: __init__.py  brain.py  cf_worker.py  chat_memory.py  config_load.py  cursor_tasks.py  discover.py  draft.py  env_load.py  executor.py  fetch.py  hermes_cli.py  hermes_config.py  hermes_entry.py  home_index.py  i18n_ui.py  local_actions.py  paths.py  pipeline.py  ranking.py  review.py  seen.py  segment.py  shell_runner.py  site.py  site_live.py  static_skin.py  subprocess_utf8.py  telegram_bot.py  telegram_cli.py  telegram_notify.py  title_clean.py  translate_body.py  translate_llm.py  url_policy.py  worker_edge.py  worker_static.py
src/hermers/agent/: __init__.py  brain.py  cursor_brain.py  rules.py  runner.py  tools.py
tools/: configure_cloudflare_builds.py  git_publish.py  test_github_push.py
tools/cursor_brain/: package-lock.json  package.json  prompt.mjs
