[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hermers"
version = "0.1.0"
description = "Hermers digest site scaffold (Cursor as brain)"
readme = "AGENTS.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
