[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hermers"
version = "0.1.0"
description = "Hermers digest site scaffold (Cursor as brain)"
readme = "AGENTS.md"
requires-python = ">=3.10"
dependencies = [
  "feedparser>=6.0.0",
  "httpx>=0.27.0",
  "beautifulsoup4>=4.12.0",
  "pyyaml>=6.0.0",
]

# Cloudflare Python Worker（可選）：本機若要用 `uv run pywrangler dev` 可 `uv sync --extra cloudflare`；
# 建議開發／部署一律使用：`uvx --from workers-py pywrangler dev|deploy`（見 deploy_to_cloudflare.ps1）。
[project.optional-dependencies]
cloudflare = [
  "workers-py",
]

[project.scripts]
hermers-pipeline = "hermers.pipeline:main"
hermers-review = "hermers.review:main"
hermers-telegram = "hermers.telegram_cli:main"
hermers-telegram-bot = "hermers.telegram_bot:main"
hermes = "hermers.hermes_entry:main"
hermes-main = "hermers.hermes_cli:main"

[tool.setuptools.packages.find]
where = ["src"]
